--- a/saray_app/pubspec.yaml
+++ b/saray_app/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
   image_picker: ^0.6.2+1
   provider: ^3.2.0
   http: ^0.12.0+2
-  shared_preferences: ^0.5.4+6
+  shared_preferences: ^0.5.6
   rflutter_alert: ^1.0.3
-  firebase_messaging:
-  flutter_lifecycle_state: ^1.0.0
-  braintree_payment: ^1.2.2
+#  firebase_messaging:
+#  flutter_lifecycle_state: ^1.0.0
+#  braintree_payment: ^1.2.2
   progress_dialog: ^1.2.0
 #  square_in_app_payments: ^1.3.0
   # The following adds the Cupertino Icons font to your application.
